<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoomBoxBeilstein</string>
    <string name="app_title">BoomBoxBeilstein</string>
    <string name="play_button">Play</string>
    <string name="stop_button">Stop</string>
    <string name="current_show">Aktuelle Sendung:</string>
    <string name="next_show">Nächste Sendung ab %s:</string>
    <string name="show_preview">Gleich: %s</string>
    <string name="lyrics_click_here">Berühren zur Vollansicht</string>
    <string name="loading">Informationen werden geladen …</string>
    <string name="playback_error">Fehler beim Abspielen des Streams</string>
    <string name="loading_stream">Lade Radio-Stream …</string>
    <string name="playing_stream">Das Radio wird abgespielt</string>
    <string name="countdown_details">Um %1$s geht\'s los mit \"%2$s\".</string>
    <string name="homepage">www.boomboxbeilstein.de</string>
    <string name="update_found_ticker">BoomBoxBeilstein: Update verfügbar</string>
    <string name="update_found">Update verfügbar. Tippen, um es zu installieren</string>
    <string name="update_title">App-Aktualisierung verfügbar</string>
    <string name="update_notice">Update verfügbar</string>
    <string name="update_notice_click">Antippen, um es zu installieren</string>
    <string name="update_desc">Die aktuelle Version der BoomBoxBeilstein-App wurde heruntergeladen und kann nun installiert werden.\n\nWenn Sie auf \""Update installieren\" klicken, werden Sie möglicherweise gefragt, ob Anwendungen aus unsicheren Quellen installiert werden sollen. Aktivieren Sie in diesem Fall bitte diese Option.</string>
    <string name="install_update">Update installieren</string>
    <string name="image_cover">Cover des aktuellen Titels</string>
    <string name="image_logo">Logo</string>
    <string name="image_show">Bild zur Sendung</string>
    <string name="please_wait">Bitte warten</string>
    
    <string name="open_mail_form">Mail ins Studio senden</string>
    <string name="mail_name_hint">Dein Name</string>
    <string name="mail_subject_hint">Betreff</string>
    <string name="mail_message_hint">Nachricht</string>
    <string name="mail_send">Abschicken</string>
    <string name="mail_cancel">Abbrechen</string>
    <string name="mail_success">Vielen Dank für deine Mail!</string>
    <string name="mail_failed">Fehler beim Senden der Mail. Bitte versuchen Sie es in kürze noch einmal.</string>
    <string name="sending_mail">Die Mail wird gesendet…,</string>
    
    <string name="server_down">Radio ist offline</string>
    <string name="server_up">Radio ist wieder online</string>

	<string name="error_title">Anwendungsfehler</string>
	<string name="error_desc">Sie haben einen Fehler in dieser Anwendung entdeckt.\n\nUm den Fehler beheben zu können, benötigen wir einen automatisch generierten Fehlerbericht. Wir wären Ihnen dankbar, wenn Sie diesen über die unten stehende Schaltfläche abschicken würden. Der Bericht enthält keine personen- oder gerätebezogenen Daten.\n\nWir bitten, die Unannehmlichkeit zu entschuldigen.</string>
	<string name="error_send">Fehlerbericht senden</string>
	<string name="error_close">Nicht senden</string>
	<string name="error_comment">Kommentare, evlt. E-Mail-Adresse (optional):</string>
	<string name="error_thankyou">Vielen Dank!</string>
	
    <string name="show_version">App-Info</string>
    <string name="info_message">BoomBoxBeilstein App Version 1.2 (27. April 2012)</string>
    <string name="info_copyright">© BoomBoxBeilstein, 2011–2012. App © Jan Melcher, 2011–2012</string>
    <string name="info_link">www.boomboxbeilstein.de</string>
    <string name="info_close">Schlieen</string>
</resources>