<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="match_parent"
    a:layout_height="wrap_content" >

    <LinearLayout
        style="@style/box"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:orientation="vertical" >

        <TextView
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:layout_marginBottom="5dp"
            a:text="@string/update_title"
            a:textStyle="bold"
            a:gravity="center_horizontal" />

        <TextView
            a:layout_width="fill_parent"
            a:layout_height="wrap_content"
            a:layout_marginBottom="10dp"
            a:text="@string/update_desc" />

        <Button
            a:id="@+id/install"
            a:layout_width="wrap_content"
            a:layout_height="wrap_content"
            a:layout_gravity="center_horizontal"
            a:paddingLeft="20dp"
            a:paddingRight="20dp"
            a:text="@string/install_update" />
    </LinearLayout>

</RelativeLayout>